--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Fase 1: Planeación</title>
+        <link rel="stylesheet" type="text/css" href="estilos.css">
+
     </head>
     <style>
 
